// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AAAForm should create AAA successfully 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 gRMUNV"
  >
    <div
      class="ant-page-header has-breadcrumb ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/tenant-id/policies"
              >
                Policies
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            >
              Add AAA (802.1x) Server
            </h1>
          </span>
        </div>
      </div>
    </div>
  </div>
  <section
    class="styledComponents__Wrapper-sc-1ibvcih-2 kZHgWB"
  >
    <div
      class="ant-pro-steps-form"
    >
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="styledComponents__StepsContainer-sc-1ibvcih-0 fzFjZo"
          >
            <div
              class="ant-steps ant-steps-vertical ant-steps-dot"
            >
              <div
                class="ant-steps-item ant-steps-item-process ant-steps-item-active"
              >
                <div
                  class="ant-steps-item-container"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    >
                      Settings
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-pro-steps-form-container"
          >
            <div
              class="ant-pro-steps-form-step ant-pro-steps-form-step-active"
            >
              <form
                autocomplete="off"
                class="ant-form ant-form-vertical"
                id="settings"
              >
                <input
                  style="display: none;"
                  type="text"
                />
                <div
                  class="ant-row Grid__GridRow-sc-5irhjd-2"
                  style="margin: -10px -10px -10px -10px;"
                >
                  <div
                    class="ant-col ant-col-10 Grid__ColInner-sc-5irhjd-0 XtIJT"
                    style="padding: 10px 10px 10px 10px;"
                  >
                    <div
                      class="Grid__Container-sc-5irhjd-1 zzbxI"
                    >
                      <h3
                        class="ant-typography styledComponents__Title-sc-1ibvcih-3 dConwg"
                      >
                        Settings
                      </h3>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class="ant-form-item-required"
                              for="settings_profileName"
                              title="Profile Name"
                            >
                              Profile Name
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-input-affix-wrapper ant-input-affix-wrapper-has-feedback"
                                >
                                  <input
                                    class="ant-input"
                                    id="settings_profileName"
                                    type="text"
                                    value=""
                                  />
                                  <span
                                    class="ant-input-suffix"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class=""
                              for="settings_tags"
                              title="Tags"
                            >
                              Tags
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <input
                                  class="ant-input"
                                  id="settings_tags"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class=""
                              for="settings_useAs"
                              title="Use as"
                            >
                              Use as
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <div
                                  class="ant-radio-group ant-radio-group-outline"
                                  id="settings_useAs"
                                >
                                  <div
                                    class="ant-space ant-space-vertical"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-bottom: 8px;"
                                    >
                                      <label
                                        class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                                      >
                                        <span
                                          class="ant-radio ant-radio-checked"
                                        >
                                          <input
                                            checked=""
                                            class="ant-radio-input"
                                            type="radio"
                                            value="radius"
                                          />
                                          <span
                                            class="ant-radio-inner"
                                          />
                                        </span>
                                        <span>
                                          RADIUS Server
                                        </span>
                                      </label>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <label
                                        class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                      >
                                        <span
                                          class="ant-radio"
                                        >
                                          <input
                                            class="ant-radio-input"
                                            type="radio"
                                            value="tacacs"
                                          />
                                          <span
                                            class="ant-radio-inner"
                                          />
                                        </span>
                                        <span>
                                          TACACS+ Server (Switch only)
                                        </span>
                                      </label>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class="ant-form-item-required"
                              for="settings_radiusServer_serverAddress"
                              title="Server Address"
                            >
                              Server Address
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <input
                                  class="ant-input"
                                  id="settings_radiusServer_serverAddress"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class="ant-form-item-required"
                              for="settings_radiusServer_authPort"
                              title="Authentication Port"
                            >
                              Authentication Port
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <div
                                  class="ant-input-number ant-input-number-in-form-item"
                                >
                                  <div
                                    class="ant-input-number-handler-wrap"
                                  >
                                    <span
                                      aria-disabled="false"
                                      aria-label="Increase Value"
                                      class="ant-input-number-handler ant-input-number-handler-up"
                                      role="button"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="up"
                                        class="anticon anticon-up ant-input-number-handler-up-inner"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                    <span
                                      aria-disabled="false"
                                      aria-label="Decrease Value"
                                      class="ant-input-number-handler ant-input-number-handler-down"
                                      role="button"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="down"
                                        class="anticon anticon-down ant-input-number-handler-down-inner"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                  <div
                                    class="ant-input-number-input-wrap"
                                  >
                                    <input
                                      aria-valuemax="65535"
                                      aria-valuemin="1"
                                      aria-valuenow="1812"
                                      autocomplete="off"
                                      class="ant-input-number-input"
                                      id="settings_radiusServer_authPort"
                                      role="spinbutton"
                                      step="1"
                                      value="1812"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class="ant-form-item-required"
                              for="settings_radiusServer_acctPort"
                              title="Accounting Port"
                            >
                              Accounting Port
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <div
                                  class="ant-input-number ant-input-number-in-form-item"
                                >
                                  <div
                                    class="ant-input-number-handler-wrap"
                                  >
                                    <span
                                      aria-disabled="false"
                                      aria-label="Increase Value"
                                      class="ant-input-number-handler ant-input-number-handler-up"
                                      role="button"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="up"
                                        class="anticon anticon-up ant-input-number-handler-up-inner"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                    <span
                                      aria-disabled="false"
                                      aria-label="Decrease Value"
                                      class="ant-input-number-handler ant-input-number-handler-down"
                                      role="button"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="down"
                                        class="anticon anticon-down ant-input-number-handler-down-inner"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                  <div
                                    class="ant-input-number-input-wrap"
                                  >
                                    <input
                                      aria-valuemax="65535"
                                      aria-valuemin="1"
                                      aria-valuenow="1813"
                                      autocomplete="off"
                                      class="ant-input-number-input"
                                      id="settings_radiusServer_acctPort"
                                      role="spinbutton"
                                      step="1"
                                      value="1813"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class="ant-form-item-required"
                              for="settings_radiusServer_sharedSecret"
                              title="Shared Secret"
                            >
                              Shared Secret
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-input-affix-wrapper ant-input-password"
                                >
                                  <input
                                    action="click"
                                    class="ant-input"
                                    id="settings_radiusServer_sharedSecret"
                                    type="password"
                                    value=""
                                  />
                                  <span
                                    class="ant-input-suffix"
                                  >
                                    <span
                                      aria-label="eye-invisible"
                                      class="anticon anticon-eye-invisible ant-input-password-icon"
                                      role="img"
                                      tabindex="-1"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="eye-invisible"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="64 64 896 896"
                                        width="1em"
                                      >
                                        <path
                                          d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                        />
                                        <path
                                          d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span>
                                  This is a Cloudpath server
                                </span>
                                <button
                                  aria-checked="false"
                                  class="ant-switch"
                                  id="settings_radiusServer_isCloudpath"
                                  role="switch"
                                  type="button"
                                >
                                  <div
                                    class="ant-switch-handle"
                                  />
                                  <span
                                    class="ant-switch-inner"
                                  />
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-col ant-col-14 Grid__ColInner-sc-5irhjd-0 XtIJT"
                    style="padding: 10px 10px 10px 10px;"
                  >
                    <div
                      class="Grid__Container-sc-5irhjd-1 zzbxI"
                    />
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styledComponents__ActionsContainer-sc-1ibvcih-1 dVvdlc"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 12px;"
          >
            <button
              class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 bxQmA-d"
              type="button"
            >
              <span>
                Finish
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 eAazoW"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;

exports[`AAAForm should edit AAA successfully 1`] = `
<DocumentFragment>
  <div
    class="styledComponents__Wrapper-sc-xov27h-0 gRMUNV"
  >
    <div
      class="ant-page-header has-breadcrumb ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb"
      >
        <ol>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
              <a
                href="/t/tenant-id/policies"
              >
                Policies
              </a>
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
          <li>
            <span
              class="ant-breadcrumb-link"
            >
               
            </span>
            <span
              class="ant-breadcrumb-separator"
            >
              /
            </span>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading"
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
          >
            <h1
              class="ant-typography ant-typography-ellipsis ant-typography-single-line ant-typography-ellipsis-single-line"
            >
              Edit AAA (802.1x) Server
            </h1>
          </span>
        </div>
      </div>
    </div>
  </div>
  <section
    class="styledComponents__Wrapper-sc-1ibvcih-2 kZHgWB"
  >
    <div
      class="ant-pro-steps-form"
    >
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="styledComponents__StepsContainer-sc-1ibvcih-0 fzFjZo"
          >
            <div
              class="ant-steps ant-steps-vertical ant-steps-dot"
            >
              <div
                class="ant-steps-item ant-steps-item-process ant-steps-item-active"
              >
                <div
                  class="ant-steps-item-container"
                >
                  <div
                    class="ant-steps-item-tail"
                  />
                  <div
                    class="ant-steps-item-icon"
                  >
                    <span
                      class="ant-steps-icon"
                    >
                      <span
                        class="ant-steps-icon-dot"
                      />
                    </span>
                  </div>
                  <div
                    class="ant-steps-item-content"
                  >
                    <div
                      class="ant-steps-item-title"
                    >
                      Settings
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
      <div
        class="ant-row"
        style="margin-left: -12px; margin-right: -12px;"
      >
        <div
          class="ant-col ant-col-24"
          style="padding-left: 12px; padding-right: 12px;"
        >
          <div
            class="ant-pro-steps-form-container"
          >
            <div
              class="ant-pro-steps-form-step ant-pro-steps-form-step-active"
            >
              <form
                autocomplete="off"
                class="ant-form ant-form-vertical"
                id="settings"
              >
                <input
                  style="display: none;"
                  type="text"
                />
                <div
                  class="ant-row Grid__GridRow-sc-5irhjd-2"
                  style="margin: -10px -10px -10px -10px;"
                >
                  <div
                    class="ant-col ant-col-10 Grid__ColInner-sc-5irhjd-0 XtIJT"
                    style="padding: 10px 10px 10px 10px;"
                  >
                    <div
                      class="Grid__Container-sc-5irhjd-1 zzbxI"
                    >
                      <h3
                        class="ant-typography styledComponents__Title-sc-1ibvcih-3 dConwg"
                      >
                        Settings
                      </h3>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class="ant-form-item-required"
                              for="settings_profileName"
                              title="Profile Name"
                            >
                              Profile Name
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-input-affix-wrapper ant-input-affix-wrapper-has-feedback"
                                >
                                  <input
                                    class="ant-input"
                                    id="settings_profileName"
                                    type="text"
                                    value=""
                                  />
                                  <span
                                    class="ant-input-suffix"
                                  />
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class=""
                              for="settings_tags"
                              title="Tags"
                            >
                              Tags
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <input
                                  class="ant-input"
                                  id="settings_tags"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class=""
                              for="settings_useAs"
                              title="Use as"
                            >
                              Use as
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <div
                                  class="ant-radio-group ant-radio-group-outline"
                                  id="settings_useAs"
                                >
                                  <div
                                    class="ant-space ant-space-vertical"
                                  >
                                    <div
                                      class="ant-space-item"
                                      style="margin-bottom: 8px;"
                                    >
                                      <label
                                        class="ant-radio-wrapper ant-radio-wrapper-checked ant-radio-wrapper-in-form-item"
                                      >
                                        <span
                                          class="ant-radio ant-radio-checked"
                                        >
                                          <input
                                            checked=""
                                            class="ant-radio-input"
                                            type="radio"
                                            value="radius"
                                          />
                                          <span
                                            class="ant-radio-inner"
                                          />
                                        </span>
                                        <span>
                                          RADIUS Server
                                        </span>
                                      </label>
                                    </div>
                                    <div
                                      class="ant-space-item"
                                    >
                                      <label
                                        class="ant-radio-wrapper ant-radio-wrapper-in-form-item"
                                      >
                                        <span
                                          class="ant-radio"
                                        >
                                          <input
                                            class="ant-radio-input"
                                            type="radio"
                                            value="tacacs"
                                          />
                                          <span
                                            class="ant-radio-inner"
                                          />
                                        </span>
                                        <span>
                                          TACACS+ Server (Switch only)
                                        </span>
                                      </label>
                                    </div>
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class="ant-form-item-required"
                              for="settings_radiusServer_serverAddress"
                              title="Server Address"
                            >
                              Server Address
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <input
                                  class="ant-input"
                                  id="settings_radiusServer_serverAddress"
                                  type="text"
                                  value=""
                                />
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class="ant-form-item-required"
                              for="settings_radiusServer_authPort"
                              title="Authentication Port"
                            >
                              Authentication Port
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <div
                                  class="ant-input-number ant-input-number-in-form-item"
                                >
                                  <div
                                    class="ant-input-number-handler-wrap"
                                  >
                                    <span
                                      aria-disabled="false"
                                      aria-label="Increase Value"
                                      class="ant-input-number-handler ant-input-number-handler-up"
                                      role="button"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="up"
                                        class="anticon anticon-up ant-input-number-handler-up-inner"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                    <span
                                      aria-disabled="false"
                                      aria-label="Decrease Value"
                                      class="ant-input-number-handler ant-input-number-handler-down"
                                      role="button"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="down"
                                        class="anticon anticon-down ant-input-number-handler-down-inner"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                  <div
                                    class="ant-input-number-input-wrap"
                                  >
                                    <input
                                      aria-valuemax="65535"
                                      aria-valuemin="1"
                                      aria-valuenow="1812"
                                      autocomplete="off"
                                      class="ant-input-number-input"
                                      id="settings_radiusServer_authPort"
                                      role="spinbutton"
                                      step="1"
                                      value="1812"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class="ant-form-item-required"
                              for="settings_radiusServer_acctPort"
                              title="Accounting Port"
                            >
                              Accounting Port
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <div
                                  class="ant-input-number ant-input-number-in-form-item"
                                >
                                  <div
                                    class="ant-input-number-handler-wrap"
                                  >
                                    <span
                                      aria-disabled="false"
                                      aria-label="Increase Value"
                                      class="ant-input-number-handler ant-input-number-handler-up"
                                      role="button"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="up"
                                        class="anticon anticon-up ant-input-number-handler-up-inner"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="up"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M890.5 755.3L537.9 269.2c-12.8-17.6-39-17.6-51.7 0L133.5 755.3A8 8 0 00140 768h75c5.1 0 9.9-2.5 12.9-6.6L512 369.8l284.1 391.6c3 4.1 7.8 6.6 12.9 6.6h75c6.5 0 10.3-7.4 6.5-12.7z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                    <span
                                      aria-disabled="false"
                                      aria-label="Decrease Value"
                                      class="ant-input-number-handler ant-input-number-handler-down"
                                      role="button"
                                      unselectable="on"
                                    >
                                      <span
                                        aria-label="down"
                                        class="anticon anticon-down ant-input-number-handler-down-inner"
                                        role="img"
                                      >
                                        <svg
                                          aria-hidden="true"
                                          data-icon="down"
                                          fill="currentColor"
                                          focusable="false"
                                          height="1em"
                                          viewBox="64 64 896 896"
                                          width="1em"
                                        >
                                          <path
                                            d="M884 256h-75c-5.1 0-9.9 2.5-12.9 6.6L512 654.2 227.9 262.6c-3-4.1-7.8-6.6-12.9-6.6h-75c-6.5 0-10.3 7.4-6.5 12.7l352.6 486.1c12.8 17.6 39 17.6 51.7 0l352.6-486.1c3.9-5.3.1-12.7-6.4-12.7z"
                                          />
                                        </svg>
                                      </span>
                                    </span>
                                  </div>
                                  <div
                                    class="ant-input-number-input-wrap"
                                  >
                                    <input
                                      aria-valuemax="65535"
                                      aria-valuemin="1"
                                      aria-valuenow="1813"
                                      autocomplete="off"
                                      class="ant-input-number-input"
                                      id="settings_radiusServer_acctPort"
                                      role="spinbutton"
                                      step="1"
                                      value="1813"
                                    />
                                  </div>
                                </div>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-label"
                          >
                            <label
                              class="ant-form-item-required"
                              for="settings_radiusServer_sharedSecret"
                              title="Shared Secret"
                            >
                              Shared Secret
                            </label>
                          </div>
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span
                                  class="ant-input-affix-wrapper ant-input-password"
                                >
                                  <input
                                    action="click"
                                    class="ant-input"
                                    id="settings_radiusServer_sharedSecret"
                                    type="password"
                                    value=""
                                  />
                                  <span
                                    class="ant-input-suffix"
                                  >
                                    <span
                                      aria-label="eye-invisible"
                                      class="anticon anticon-eye-invisible ant-input-password-icon"
                                      role="img"
                                      tabindex="-1"
                                    >
                                      <svg
                                        aria-hidden="true"
                                        data-icon="eye-invisible"
                                        fill="currentColor"
                                        focusable="false"
                                        height="1em"
                                        viewBox="64 64 896 896"
                                        width="1em"
                                      >
                                        <path
                                          d="M942.2 486.2Q889.47 375.11 816.7 305l-50.88 50.88C807.31 395.53 843.45 447.4 874.7 512 791.5 684.2 673.4 766 512 766q-72.67 0-133.87-22.38L323 798.75Q408 838 512 838q288.3 0 430.2-300.3a60.29 60.29 0 000-51.5zm-63.57-320.64L836 122.88a8 8 0 00-11.32 0L715.31 232.2Q624.86 186 512 186q-288.3 0-430.2 300.3a60.3 60.3 0 000 51.5q56.69 119.4 136.5 191.41L112.48 835a8 8 0 000 11.31L155.17 889a8 8 0 0011.31 0l712.15-712.12a8 8 0 000-11.32zM149.3 512C232.6 339.8 350.7 258 512 258c54.54 0 104.13 9.36 149.12 28.39l-70.3 70.3a176 176 0 00-238.13 238.13l-83.42 83.42C223.1 637.49 183.3 582.28 149.3 512zm246.7 0a112.11 112.11 0 01146.2-106.69L401.31 546.2A112 112 0 01396 512z"
                                        />
                                        <path
                                          d="M508 624c-3.46 0-6.87-.16-10.25-.47l-52.82 52.82a176.09 176.09 0 00227.42-227.42l-52.82 52.82c.31 3.38.47 6.79.47 10.25a111.94 111.94 0 01-112 112z"
                                        />
                                      </svg>
                                    </span>
                                  </span>
                                </span>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                      <div
                        class="ant-form-item"
                      >
                        <div
                          class="ant-row ant-form-item-row"
                        >
                          <div
                            class="ant-col ant-form-item-control"
                          >
                            <div
                              class="ant-form-item-control-input"
                            >
                              <div
                                class="ant-form-item-control-input-content"
                              >
                                <span>
                                  This is a Cloudpath server
                                </span>
                                <button
                                  aria-checked="false"
                                  class="ant-switch"
                                  id="settings_radiusServer_isCloudpath"
                                  role="switch"
                                  type="button"
                                >
                                  <div
                                    class="ant-switch-handle"
                                  />
                                  <span
                                    class="ant-switch-inner"
                                  />
                                </button>
                              </div>
                            </div>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="ant-col ant-col-14 Grid__ColInner-sc-5irhjd-0 XtIJT"
                    style="padding: 10px 10px 10px 10px;"
                  >
                    <div
                      class="Grid__Container-sc-5irhjd-1 zzbxI"
                    />
                  </div>
                </div>
              </form>
            </div>
          </div>
        </div>
      </div>
      <div
        class="styledComponents__ActionsContainer-sc-1ibvcih-1 dVvdlc"
      >
        <div
          class="ant-space ant-space-horizontal ant-space-align-center"
        >
          <div
            class="ant-space-item"
            style="margin-right: 12px;"
          >
            <button
              class="ant-btn ant-btn-primary styledComponents__Button-sc-zk1lj8-0 bxQmA-d"
              type="button"
            >
              <span>
                Finish
              </span>
            </button>
          </div>
          <div
            class="ant-space-item"
          >
            <button
              class="ant-btn ant-btn-default styledComponents__Button-sc-zk1lj8-0 eAazoW"
              type="button"
            >
              <span>
                Cancel
              </span>
            </button>
          </div>
        </div>
      </div>
    </div>
  </section>
</DocumentFragment>
`;
